[tool.poetry]
name = "bch_hansel"
version = "0.1.0"
description = ""
authors = ["Bryan Hann <nobody@nowhere>"]

[tool.poetry.dependencies]
python = "^3.7"
bch_inject = {git = "https://github.com/bryanhann/poetry.bch_inject", tag = "0.1.2"  }
bch_config = {git = "https://github.com/bryanhann/poetry.bch_config", tag = "0.1.0"  }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-shell = "^0.2.3"
six = "^1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bch-hansel = 'bch_hansel.console:hansel'
